--- a/ping-coming-soon-page-master/style.css
+++ b/ping-coming-soon-page-master/style.css
@@ -106,7 +106,7 @@ footer .copyRight {
     input, button{
         border-radius: 25px;
         padding: 10px;
-        width: 15em;
+        width: 20em;
         border: 1px solid hsl(223, 100%, 88%);
         margin-bottom: 1em;
     }
@@ -114,6 +114,11 @@ footer .copyRight {
     button {
         color: white;
         background-color:hsl(223, 87%, 63%);
-        width: 7em;
+        width: 10em;
+    }
+
+    img.illustrationDash {
+        width: 40em;
+        height: 50%;
     }
 }
