--- a/ping-coming-soon-page-master/style.css
+++ b/ping-coming-soon-page-master/style.css
@@ -22,11 +22,11 @@ main {
     /* Equal to height of footer */
    /* But also accounting for potential margin-bottom of last child */
 
-    margin-bottom: -40px;
+    margin-bottom: -50px;
 }
 
 .push, footer {
-    height: 40px;
+    height: 50px;
 }
 
 main img.logo{
@@ -64,8 +64,12 @@ button {
 img.illustrationDash {
     width: 22em;
     height: 50%;
+    margin-top: 1em;
 }
 
+footer {
+    margin-top: 3em;
+}
 footer .socialMedia {
     display: flex;
     gap: 5px;
@@ -75,9 +79,8 @@ footer .socialMedia {
 footer .socialMedia div {
     border-radius: 25px;
     padding: 10px;
-    /* border: solid 2px green; */
     background-color: whitesmoke;
-    /* box-shadow: 0px 5px 5px 0px whitesmoke; */
+   
 }
 
 .customIcon {
@@ -120,5 +123,6 @@ footer .copyRight {
     img.illustrationDash {
         width: 40em;
         height: 50%;
+        
     }
 }
